--- a/bon-appetit/src/Content/reports.css
+++ b/bon-appetit/src/Content/reports.css
@@ -36,11 +36,15 @@
     width: 250px !important;
     margin-left: 10px !important;
     box-shadow: 0px 0px 10px -4px rgba(0,0,0,0.75) !important;
-    padding: 5px !important;
+    padding: 10px !important;
 }
 
 .filter-bar h2 {
     margin: 10px 0 0 10px !important;
     font: 20px 'Roboto', sans-serif !important;
     color: #fff !important;
+}
+
+.buttons {
+    margin-top: 10px;
 }
